--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,14 @@ board = d1_mini
 platform = espressif8266
 framework = arduino
 monitor_speed = 115200
-lib_deps = 
+lib_deps =
+	ESP Async WebServer
 	adafruit/Adafruit BME280 Library @ ^2.1.0
 	adafruit/Adafruit Unified Sensor @ ^1.1.4
 	jfturcot/SimpleTimer @ 0.0.0-alpha+sha.b30890b8f7
 	links2004/WebSockets@^2.6.1
-	; arduino-libraries/Arduino_JSON@^0.2.0
 	bblanchon/ArduinoJson@^7.4.1
+	; arduino-libraries/Arduino_JSON@^0.2.0
+	me-no-dev/ESPAsyncTCP@^2.0.0
 build_flags = 
 	-Wl,--print-memory-usage
