--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,11 @@
 board = d1_mini
 platform = espressif8266
 framework = arduino
+
+board_build.filesystem = littlefs
+
 monitor_speed = 115200
+
 lib_deps =
 	ESP Async WebServer
 	adafruit/Adafruit BME280 Library @ ^2.1.0
@@ -21,5 +25,6 @@ lib_deps =
 	links2004/WebSockets@^2.6.1
 	bblanchon/ArduinoJson@^7.4.1
 	me-no-dev/ESPAsyncTCP@^2.0.0
+
 build_flags = 
 	-Wl,--print-memory-usage
