--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ lib_deps =
 	jfturcot/SimpleTimer @ 0.0.0-alpha+sha.b30890b8f7
 	links2004/WebSockets@^2.6.1
 	bblanchon/ArduinoJson@^7.4.1
-	me-no-dev/ESPAsyncTCP@^2.0.0
+	; me-no-dev/ESPAsyncTCP@^2.0.0
 
 build_flags = 
 	-Wl,--print-memory-usage
