--- a/platformio.ini
+++ b/platformio.ini
@@ -19,11 +19,11 @@ build_flags =
 	-Wl,--print-memory-usage
 
 lib_deps = 
-	jfturcot/SimpleTimer @ 0.0.0-alpha+sha.b30890b8f7
-	bblanchon/ArduinoJson@^7.4.1
-	adafruit/Adafruit BME280 Library @ ^2.1.0
-	adafruit/Adafruit Unified Sensor @ ^1.1.4
-	me-no-dev/ESPAsyncTCP@^2.0.0
+	jfturcot/SimpleTimer
+	bblanchon/ArduinoJson
+	adafruit/Adafruit BME280 Library
+	adafruit/Adafruit Unified Sensor
+	ESPAsyncTCP
 	ESP Async WebServer
 	AsyncElegantOTA
-	links2004/WebSockets@^2.6.1
+	links2004/WebSockets
